2007-02-24  Tim Moore  <timoore@redhat.com>

	* hpd/Actionpoint.java: New file.
	* hpd/ActionpointTable.java: New file.
	* hpd/LineBreakpointAdapter.java: New file.
	* hpd/Command.java (setOut, getOut): remove.
	* hpd/CLI.java (CLI): Change out PrintStream to outWriter PrintWriter.
	(apTable): New member.
	(BreakpointHandler.handle): Add breakpoint to action point table.
	(DeleteHandler.handle): Implement breakpoint deletion.
	(ActionsHandler): New class.

2007-02-21  Stan Cox  <scox@redhat.com>

	* hpd/CLI.java (CLI): Add initial command line parameter.
	(attach): Don't require executable name.

2007-02-19  Mike Cvet  <mcvet@redhat.com>

	* hpd/CLI.java (DetachHandler.handle): Updated to call 
	RunState.continueExecution().
	* hpd/CLI.java (GoHandler.handle): Ditto.

2007-02-15  Tim Moore  <timoore@redhat.com>

	* hpd/SymTab.java (refresh): New method.
	* hpd/ExprSymTab.java (refreshCurrentFrame): New method.
	* hpd/CLI.java (symtabNeedsRefresh): New member.
	(refreshSymtab): New method.
	(handle): In most handler classes, call refreshSymtab.
	(AttachHandler.handle): Add error messages.
	(RunStateObserver.update): Set symtabNeedsRefresh if necessary.

2007-02-14  Stan Cox  <scox@redhat.com>

	* hpd/ExprSymTab.java (get): Add offset to classType.addMember.
	(get): New for class members.
	* hpd/SymTab.java (get): Likewise.

2007-02-07  Stan Cox  <scox@redhat.com>

	* hpd/CLI.java (frysk.proc.Action, frysk.proc.TaskObserver):
	Remove unused imports.
	(DeleteBreakpointHandler): Remove params, filename, linenumber.	
	(params): remove.

2007-02-07  Tim Moore  <timoore@redhat.com>	

	* hpd/CLI.java (addMessage): New version that takes string and
	message type.
	(CLI): Reformat to GNU standards, use new addMessage convenience
	method.
	
2007-02-07  Tim Moore  <timoore@redhat.com>

	* hpd/CLI.java (attachedObserver): Remove.
	(runState, runStateObserver, AttachHandler, DetachHandler): Start
	and stop processes using RunState object.