@@ -1,5 +1,10 @@
 2007-02-26  Andrew Cagney  <cagney@redhat.com>
 
+	* StackFrame.java (toPrint): Use Line.
+	(lineNum, getLineNumber, column, getColumn): Delete.
+	* TestRunState.java: Update, use StackFrame .getLine.
+	* TestStackBacktrace.java: Ditto.
+
 	* StackFrame.java (setStartLine, setEndLine): Delete.
 	(startLine, getStartLine, endLine, getEndLine): Delete.
 	
