@@ -1,5 +1,7 @@
 2007-02-26  Andrew Cagney  <cagney@redhat.com>
 
+	* SourceWindow.java: Use StackFrame .getLines.
+
 	* SourceBuffer.java: Replace Frame .getStartLine and Frame
 	.getEndLine. with Frame .getLines .getLine.
 	* InlineBuffer.java (setCurrentLine): Delete.
