@@ -1,3 +1,7 @@
+2007-02-26  Andrew Cagney  <cagney@redhat.com>
+
+	* hpd/CLI.java: Use frysk.rt.Line instead of Frame getLineNumber.
+
 2007-02-24  Tim Moore  <timoore@redhat.com>
 
 	* hpd/Actionpoint.java: New file.
